--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, intial-scale=1.0">
-    </title> Haley Brown // Web Developer</title>
+    </title> "Haley's Portfolio"</title>
     <link rel="stylesheet" href="./Assets/style.css"/>
 </head>
 
