--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, intial-scale=1.0">
-    <title> "Haley's Portfolio"</title>
+    <t cottitle> "Haley's Portfolio"</title>
     <link rel="stylesheet" href="./Assets/style.css"/>
 </head>
 
@@ -30,7 +30,7 @@
 
     <main class="page-wrapper">
         <section class="page-section" id="about">
-            <h2>About Me</h2>
+            <h2>About Me</h2> 
             <div>
                 <h3>Get to know Haley</h3>
                 <p> 
