--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <main class="page-wrapper">
         <section class="page-section" id="about">
             <h2>About Me</h2> 
+            <img src="./Assets/Images/about-me.jpeg" alt="picture of me"/>
             <div>
                 <h3>Get to know Haley</h3>
                 <p> 
